# mail_beep_sound

./: .gitignore  LICENSE  README.md  cli.py  config_manager.py  gmail_monitor.py  main.py  pyproject.toml  utils.py
ui/: __init__.py  main_window.py  settings_window.py
