[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mail-beep-sound"
version = "0.1.0"
description = "Gmail monitoring app with beep notification"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "numpy>=2.3.3",
    "simpleaudio>=1.0.4",
]

[project.scripts]
mail-beep = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
    "ruff>=0.13.2",
]
